--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg">
     <div class="container">
-      <a class="navbar-brand text-white fs-4 fw-bold" href="#">Produk Android</a>
+      <a class="navbar-brand text-white fs-4 fw-bold" href="#">Greencart Bootstrap</a>
     </div>
   </nav>
 
