--- a/index.html
+++ b/index.html
@@ -3,78 +3,81 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Landing Page Toko Online</title>
-
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-
-  <!-- Glightbox CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" rel="stylesheet" />
-
-  <!-- Custom CSS -->
-  <link href="style.css" rel="stylesheet" />
+  <title>Landing Page dengan Keranjang Belanja</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/glightbox/3.2.0/css/glightbox.min.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
-  <header class="bg-light p-3 mb-4 shadow-sm">
-    <div class="container d-flex justify-content-between align-items-center">
-      <h1 class="h4 text-success mb-0">Toko Hijau Muda</h1>
-      <button class="btn btn-success d-md-none" id="cartToggleBtn" aria-label="Toggle Keranjang">
-        Keranjang 🛒
-      </button>
+  <header class="bg-success bg-opacity-75 text-white py-3 mb-4">
+    <div class="container">
+      <h1 class="h3">Toko Online Hijau Muda</h1>
     </div>
   </header>
 
-  <main class="container mb-5">
+  <main class="container">
     <div class="row">
-      <!-- Produk Grid -->
-      <section class="col-md-8" id="product-list">
-        <div class="row g-3" id="productsGrid">
-          <!-- Produk akan dimuat di sini oleh JS -->
+      <section class="col-lg-9">
+        <div class="row" id="produk-list">
+          <!-- Dummy produk -->
+          <div class="col-sm-6 col-md-4 mb-4">
+            <div class="card shadow-sm product-card">
+              <a href="https://placehold.co/600x400/png?text=Produk+1" class="glightbox" data-glightbox="title: Produk 1; description: Rp 50.000">
+                <img src="https://placehold.co/600x400/png?text=Produk+1" class="card-img-top" alt="Produk 1" />
+              </a>
+              <div class="card-body">
+                <h5 class="card-title">Produk 1</h5>
+                <p class="card-text text-success fw-bold">Rp 50.000</p>
+                <button class="btn btn-success btn-sm w-100 add-to-cart" data-id="1" data-name="Produk 1" data-price="50000">Tambah ke Keranjang</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 mb-4">
+            <div class="card shadow-sm product-card">
+              <a href="https://placehold.co/600x400/png?text=Produk+2" class="glightbox" data-glightbox="title: Produk 2; description: Rp 75.000">
+                <img src="https://placehold.co/600x400/png?text=Produk+2" class="card-img-top" alt="Produk 2" />
+              </a>
+              <div class="card-body">
+                <h5 class="card-title">Produk 2</h5>
+                <p class="card-text text-success fw-bold">Rp 75.000</p>
+                <button class="btn btn-success btn-sm w-100 add-to-cart" data-id="2" data-name="Produk 2" data-price="75000">Tambah ke Keranjang</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 mb-4">
+            <div class="card shadow-sm product-card">
+              <a href="https://placehold.co/600x400/png?text=Produk+3" class="glightbox" data-glightbox="title: Produk 3; description: Rp 100.000">
+                <img src="https://placehold.co/600x400/png?text=Produk+3" class="card-img-top" alt="Produk 3" />
+              </a>
+              <div class="card-body">
+                <h5 class="card-title">Produk 3</h5>
+                <p class="card-text text-success fw-bold">Rp 100.000</p>
+                <button class="btn btn-success btn-sm w-100 add-to-cart" data-id="3" data-name="Produk 3" data-price="100000">Tambah ke Keranjang</button>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
 
-      <!-- Keranjang Sidebar -->
-      <aside class="col-md-4 d-none d-md-block" id="cartSidebar">
-        <div class="card sticky-top" style="top: 20px;">
-          <div class="card-header bg-success text-white">
-            Keranjang Belanja
-          </div>
-          <div class="card-body" id="cartItemsContainer">
-            <!-- Isi keranjang muncul disini -->
-            <p class="text-muted">Keranjang kosong</p>
-          </div>
-          <div class="card-footer text-end">
-            <button class="btn btn-success" id="orderBtn" disabled>Order via WhatsApp</button>
-          </div>
+      <aside class="col-lg-3">
+        <div class="cart bg-light p-3 rounded shadow-sm sticky-top">
+          <h4 class="mb-3">Keranjang Belanja</h4>
+          <ul class="list-group mb-3" id="cart-items">
+            <li class="list-group-item">Keranjang kosong</li>
+          </ul>
+          <div class="mb-3 text-end fw-bold" id="cart-total">Total: Rp 0</div>
+          <button id="order-btn" class="btn btn-success w-100" disabled>Order via WhatsApp</button>
         </div>
       </aside>
     </div>
   </main>
 
-  <!-- Drawer Keranjang untuk mobile -->
-  <div id="cartDrawer" class="cart-drawer d-md-none">
-    <div class="cart-drawer-content shadow">
-      <div class="d-flex justify-content-between align-items-center p-3 bg-success text-white">
-        <h5 class="mb-0">Keranjang Belanja</h5>
-        <button class="btn btn-outline-light btn-sm" id="cartCloseBtn" aria-label="Tutup Keranjang">&times;</button>
-      </div>
-      <div class="p-3" id="cartItemsContainerMobile">
-        <p class="text-muted">Keranjang kosong</p>
-      </div>
-      <div class="p-3 text-end border-top">
-        <button class="btn btn-success w-100" id="orderBtnMobile" disabled>Order via WhatsApp</button>
-      </div>
-    </div>
-  </div>
+  <footer class="text-center py-3 mt-4 bg-success bg-opacity-75 text-white">
+    © 2025 Toko Online Hijau Muda
+  </footer>
 
-  <!-- Bootstrap Bundle JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Glightbox JS -->
-  <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
-  
-  <!-- Custom JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/glightbox/3.2.0/glightbox.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
