--- a/index.html
+++ b/index.html
@@ -4,80 +4,53 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Landing Page dengan Keranjang Belanja</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/glightbox/3.2.0/css/glightbox.min.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header class="bg-success bg-opacity-75 text-white py-3 mb-4">
-    <div class="container">
-      <h1 class="h3">Toko Online Hijau Muda</h1>
-    </div>
+  <header class="bg-success text-white p-3 text-center">
+    <h1>Produk Kami</h1>
   </header>
 
-  <main class="container">
-    <div class="row">
-      <section class="col-lg-9">
-        <div class="row" id="produk-list">
-          <!-- Dummy produk -->
-          <div class="col-sm-6 col-md-4 mb-4">
-            <div class="card shadow-sm product-card">
-              <a href="https://placehold.co/600x400/png?text=Produk+1" class="glightbox" data-glightbox="title: Produk 1; description: Rp 50.000">
-                <img src="https://placehold.co/600x400/png?text=Produk+1" class="card-img-top" alt="Produk 1" />
-              </a>
-              <div class="card-body">
-                <h5 class="card-title">Produk 1</h5>
-                <p class="card-text text-success fw-bold">Rp 50.000</p>
-                <button class="btn btn-success btn-sm w-100 add-to-cart" data-id="1" data-name="Produk 1" data-price="50000">Tambah ke Keranjang</button>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-4 mb-4">
-            <div class="card shadow-sm product-card">
-              <a href="https://placehold.co/600x400/png?text=Produk+2" class="glightbox" data-glightbox="title: Produk 2; description: Rp 75.000">
-                <img src="https://placehold.co/600x400/png?text=Produk+2" class="card-img-top" alt="Produk 2" />
-              </a>
-              <div class="card-body">
-                <h5 class="card-title">Produk 2</h5>
-                <p class="card-text text-success fw-bold">Rp 75.000</p>
-                <button class="btn btn-success btn-sm w-100 add-to-cart" data-id="2" data-name="Produk 2" data-price="75000">Tambah ke Keranjang</button>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-4 mb-4">
-            <div class="card shadow-sm product-card">
-              <a href="https://placehold.co/600x400/png?text=Produk+3" class="glightbox" data-glightbox="title: Produk 3; description: Rp 100.000">
-                <img src="https://placehold.co/600x400/png?text=Produk+3" class="card-img-top" alt="Produk 3" />
-              </a>
-              <div class="card-body">
-                <h5 class="card-title">Produk 3</h5>
-                <p class="card-text text-success fw-bold">Rp 100.000</p>
-                <button class="btn btn-success btn-sm w-100 add-to-cart" data-id="3" data-name="Produk 3" data-price="100000">Tambah ke Keranjang</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <aside class="col-lg-3">
-        <div class="cart bg-light p-3 rounded shadow-sm sticky-top">
-          <h4 class="mb-3">Keranjang Belanja</h4>
-          <ul class="list-group mb-3" id="cart-items">
-            <li class="list-group-item">Keranjang kosong</li>
-          </ul>
-          <div class="mb-3 text-end fw-bold" id="cart-total">Total: Rp 0</div>
-          <button id="order-btn" class="btn btn-success w-100" disabled>Order via WhatsApp</button>
-        </div>
-      </aside>
+  <main class="container my-4">
+    <div class="row" id="product-list">
+      <!-- Produk akan disisipkan di sini oleh JS -->
     </div>
   </main>
 
-  <footer class="text-center py-3 mt-4 bg-success bg-opacity-75 text-white">
-    © 2025 Toko Online Hijau Muda
-  </footer>
+  <!-- Keranjang Sidebar untuk desktop -->
+  <aside id="cartSidebar" class="col-md-4 position-fixed bg-white p-3 border-start d-none d-md-block" style="top: 70px; right: 0; width: 320px; height: calc(100vh - 70px); overflow-y: auto; z-index: 1040;">
+    <h5>Keranjang Belanja</h5>
+    <div id="cart-items"></div>
+    <div class="mt-3 border-top pt-2">
+      <strong>Total: </strong><span id="cart-total">Rp 0</span>
+    </div>
+    <button id="orderBtn" class="btn btn-success mt-3 w-100" disabled>Order via WhatsApp</button>
+  </aside>
+
+  <!-- Tombol keranjang drawer untuk mobile -->
+  <button id="cartToggleBtn" class="btn btn-success d-md-none fixed-bottom m-3" style="z-index: 1060;">
+    Keranjang (<span id="cart-count-mobile">0</span>)
+  </button>
+
+  <!-- Keranjang Drawer untuk mobile -->
+  <div id="cartDrawer" class="cart-drawer">
+    <div class="cart-drawer-content p-3">
+      <div class="d-flex justify-content-between align-items-center mb-3">
+        <h5>Keranjang Belanja</h5>
+        <button id="cartCloseBtn" class="btn btn-sm btn-outline-secondary">Tutup</button>
+      </div>
+      <div id="cart-items-mobile" style="overflow-y: auto; flex-grow: 1;"></div>
+      <div class="mt-3 border-top pt-2">
+        <strong>Total: </strong><span id="cart-total-mobile">Rp 0</span>
+      </div>
+      <button id="orderBtnMobile" class="btn btn-success mt-3 w-100" disabled>Order via WhatsApp</button>
+    </div>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/glightbox/3.2.0/glightbox.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
