--- a/index.html
+++ b/index.html
@@ -5,52 +5,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Landing Page dengan Keranjang Belanja</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
+  <link href="style.css" rel="stylesheet" />
 </head>
 <body>
   <header class="bg-success text-white p-3 text-center">
-    <h1>Produk Kami</h1>
+    <h1>Toko Online Android</h1>
+    <p>Produk Berkualitas dengan Harga Terjangkau</p>
   </header>
 
   <main class="container my-4">
-    <div class="row" id="product-list">
-      <!-- Produk akan disisipkan di sini oleh JS -->
+    <div class="row" id="productList">
+      <!-- Produk akan di-render oleh JS -->
     </div>
   </main>
 
-  <!-- Keranjang Sidebar untuk desktop -->
-  <aside id="cartSidebar" class="col-md-4 position-fixed bg-white p-3 border-start d-none d-md-block" style="top: 70px; right: 0; width: 320px; height: calc(100vh - 70px); overflow-y: auto; z-index: 1040;">
-    <h5>Keranjang Belanja</h5>
-    <div id="cart-items"></div>
-    <div class="mt-3 border-top pt-2">
-      <strong>Total: </strong><span id="cart-total">Rp 0</span>
-    </div>
-    <button id="orderBtn" class="btn btn-success mt-3 w-100" disabled>Order via WhatsApp</button>
-  </aside>
-
-  <!-- Tombol keranjang drawer untuk mobile -->
-  <button id="cartToggleBtn" class="btn btn-success d-md-none fixed-bottom m-3" style="z-index: 1060;">
-    Keranjang (<span id="cart-count-mobile">0</span>)
-  </button>
-
-  <!-- Keranjang Drawer untuk mobile -->
-  <div id="cartDrawer" class="cart-drawer">
-    <div class="cart-drawer-content p-3">
-      <div class="d-flex justify-content-between align-items-center mb-3">
-        <h5>Keranjang Belanja</h5>
-        <button id="cartCloseBtn" class="btn btn-sm btn-outline-secondary">Tutup</button>
+  <!-- Keranjang drawer -->
+  <div class="cart-drawer" id="cartSidebar" aria-label="Keranjang Belanja">
+    <div class="cart-drawer-content d-flex flex-column">
+      <div class="p-3 border-bottom d-flex justify-content-between align-items-center">
+        <h5 class="mb-0">Keranjang Belanja</h5>
+        <button id="closeCartBtn" class="btn btn-outline-secondary btn-sm" aria-label="Tutup Keranjang">&times;</button>
       </div>
-      <div id="cart-items-mobile" style="overflow-y: auto; flex-grow: 1;"></div>
-      <div class="mt-3 border-top pt-2">
-        <strong>Total: </strong><span id="cart-total-mobile">Rp 0</span>
+      <div class="cart-items-wrapper flex-grow-1 overflow-auto p-3" id="cartItemsList">
+        <!-- Item keranjang muncul di sini -->
       </div>
-      <button id="orderBtnMobile" class="btn btn-success mt-3 w-100" disabled>Order via WhatsApp</button>
+      <div class="cart-footer">
+        <button id="orderWhatsAppBtn" class="btn btn-success" disabled>
+          Order via WhatsApp
+        </button>
+      </div>
     </div>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
+  <!-- Tombol buka keranjang di mobile -->
+  <button id="openCartBtn" class="btn btn-success open-cart-btn" aria-label="Buka Keranjang">
+    🛒 <span id="cartCountBadge" class="badge bg-light text-success">0</span>
+  </button>
+
   <script src="script.js"></script>
 </body>
 </html>
